centjes-gen/test_resources/balance/error/BE_ASSERTION.cent
currency USD 0.01

account assets
account income

2023-12-09
  * assets +2 USD
  * income -2 USD
  + assert assets = +3 USD
